--- a/app/src/main/res/layout/item_club_review_detail_grade.xml
+++ b/app/src/main/res/layout/item_club_review_detail_grade.xml
@@ -10,8 +10,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <LinearLayout
             android:layout_width="36dp"
             android:layout_height="wrap_content"
@@ -27,11 +27,11 @@
                 android:textColor="@color/black_1"/>
 
         <TextView
-                android:text="@{reviewGrade.score}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:textColor="#444444"
+                detailReviewGrade="@{reviewGrade.score}"
                 android:textSize="16sp"
                 tools:text="B" />
         <TextView
@@ -44,7 +44,8 @@
                 android:textSize="8sp"
                 android:lineHeight="13sp"
                 android:textColor="#aaaaaa"
-                android:text="@{reviewGrade.label}"/>
+                detailReviewGradeScore="@{reviewGrade.score}"
+                detailReviewGradeCategory="@{reviewGrade.categoryName}" />
     </LinearLayout>
 
 </LinearLayout>
