리뷰 탭 디자인 수정 - 리스트뷰, 상세뷰

--- a/app/src/main/res/layout/activity_calendar_detail.xml
+++ b/app/src/main/res/layout/activity_calendar_detail.xml
@@ -874,7 +874,6 @@
                 android:orientation="horizontal">
 
             <ImageView
-                    tools:visibility="gone"
                     android:id="@+id/act_cal_detail_iv_bookmark"
                     android:background="#656ef0"
                     android:layout_width="wrap_content"
@@ -907,6 +906,7 @@
                     android:textColor="#33ffffff"
                     android:gravity="center"/>
             <RelativeLayout
+                    android:visibility="gone"
                     android:id="@+id/act_cal_detail_rl_store"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
