--- a/app/src/main/res/layout/fragment_review_page.xml
+++ b/app/src/main/res/layout/fragment_review_page.xml
@@ -14,12 +14,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="#f2f2f2">
+        <View
+                android:id="@+id/frag_review_page_v"
+                tools:visibility="gone"
+                vVisibilityByClubType="@{reviewListFragment.reviewType}"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/grey_4"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_below="@+id/frag_review_page_v"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:visibility="gone"
-                clVisibilityByInt = "@{vm.reviewList.size()}">
+                clVisibilityByBool="@{vm.isEmpty()}">
             <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -50,25 +57,6 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-            <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/frag_review_cl_regi_club"
-                    android:layout_width="match_parent"
-                    android:layout_height="48dp"
-                    android:background="@drawable/banner_1"
-                    clubBannerVisibility ="@{reviewListFragment.reviewType}">
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="23dp"
-                        android:text="우리 동아리가 없나요? 동아리 등록하기"
-                        android:fontFamily="@font/noto_sans_kr_medium"
-                        android:textSize="14sp"
-                        android:textColor="@color/white"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
             <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
                     android:id="@+id/frag_review_page_srl"
                     android:layout_width="match_parent"
