--- a/app/src/main/res/layout/item_club_review_detail_grade.xml
+++ b/app/src/main/res/layout/item_club_review_detail_grade.xml
@@ -21,6 +21,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@{reviewGrade.categoryName}"
+                tools:text="전문성"
                 android:fontFamily="@font/noto_sans_kr_regular"
                 android:textSize="8sp"
                 android:lineHeight="13sp"
@@ -29,8 +30,8 @@
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/noto_sans_kr_medium"
-                android:textColor="#444444"
+                android:fontFamily="@font/noto_sans_kr_bold"
+                android:textColor="@color/black_1"
                 detailReviewGrade="@{reviewGrade.score}"
                 android:textSize="16sp"
                 tools:text="B" />
@@ -43,7 +44,7 @@
                 android:fontFamily="@font/noto_sans_kr_regular"
                 android:textSize="8sp"
                 android:lineHeight="13sp"
-                android:textColor="#aaaaaa"
+                android:textColor="@color/grey_2"
                 detailReviewGradeScore="@{reviewGrade.score}"
                 detailReviewGradeCategory="@{reviewGrade.categoryName}" />
     </LinearLayout>
