--- a/app/src/main/res/layout/item_review.xml
+++ b/app/src/main/res/layout/item_review.xml
@@ -13,11 +13,13 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingHorizontal="24dp"
+            android:paddingTop="16dp"
             android:background="@drawable/border_review_box">
         <LinearLayout
+                android:id="@+id/item_review_ll_box"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                tools:visibility="visible"
                 android:orientation="horizontal">
             <androidx.cardview.widget.CardView
                     android:layout_width="wrap_content"
@@ -98,10 +100,7 @@
                         android:textColor="@color/ssgsag" />
             </androidx.cardview.widget.CardView>
 
-
         </LinearLayout>
-
-
 
         <TextView
                 android:layout_width="wrap_content"
@@ -113,23 +112,12 @@
                 android:maxLines="1"
                 android:fontFamily="@font/noto_sans_kr_medium"
                 android:textSize="15sp"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                tools:text="동아리 소개입니다!!"
-                noClubIntroduce="@{clubInfo.oneLine}"
-                android:fontFamily="@font/noto_sans_kr_regular"
-                android:textSize="10sp"
-                android:maxLines="1"
-                android:textColor="@color/grey_2"
-                android:layout_marginTop="2dp"/>
         <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
+                android:layout_marginTop="6dp"
                 android:orientation="horizontal"
                 android:layout_marginBottom="18dp">
-
             <RatingBar
                     android:id="@+id/item_review_rb"
                     android:layout_width="wrap_content"
