--- a/app/src/main/res/layout/fragment_review_write_start.xml
+++ b/app/src/main/res/layout/fragment_review_write_start.xml
@@ -55,6 +55,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="선택"
+                    android:layout_marginLeft="4dp"
                     android:textColor="#444444"
                     android:fontFamily="@font/noto_sans_kr_bold"
                     android:textSize="16sp"
