--- a/app/src/main/res/layout/item_my_review.xml
+++ b/app/src/main/res/layout/item_my_review.xml
@@ -6,15 +6,20 @@
                 type="com.icoo.ssgsag_android.data.model.review.club.ClubPost" />
     </data>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="12dp"
-        android:paddingBottom="17dp"
-        android:background="@color/white"
-        android:paddingHorizontal="24dp">
+        android:layout_height="wrap_content">
+    <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingTop="12dp"
+            android:paddingBottom="17dp"
+            android:background="@color/white"
+            android:paddingHorizontal="24dp">
+
 
     <LinearLayout
             android:layout_width="wrap_content"
@@ -24,6 +29,8 @@
             app:layout_constraintTop_toTopOf="parent">
 
     <LinearLayout
+            llTopBoxVisibility="@{clubPost.clubType}"
+            tools:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
@@ -149,5 +156,15 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"/>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/grey_4"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
 </layout>
