--- a/app/src/main/res/layout/activity_club_review_detail.xml
+++ b/app/src/main/res/layout/activity_club_review_detail.xml
@@ -29,20 +29,6 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 />
         <TextView
-                android:layout_gravity="center"
-                android:letterSpacing="-0.02"
-                android:textColor="#444444"
-                android:fontFamily="@font/noto_sans_kr_bold"
-                android:textSize="16sp"
-                android:text="상세후기"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
-
-        <TextView
                 android:id="@+id/act_review_detail_iv_write"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -106,9 +92,9 @@
                 android:layout_marginTop="4dp"
                 tools:text="SOPT - 연합 IT 창업동아리"
                 android:text="@{vm.reviewDetail.clubName}"
-                android:fontFamily="@font/noto_sans_kr_medium"
+                android:fontFamily="@font/noto_sans_kr_bold"
                 android:textSize="16sp"
-                android:textColor="#333333"/>
+                android:textColor="@color/black_1"/>
         <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
