--- a/app/src/main/res/layout/activity_club_review_edit.xml
+++ b/app/src/main/res/layout/activity_club_review_edit.xml
@@ -80,51 +80,10 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/noto_sans_kr_bold"
-                                android:text=" 활동 정보"
+                                android:text="@string/review_edit_info"
                                 android:textColor="@color/black_1"
                                 android:textSize="18sp" />
 
-                    </LinearLayout>
-
-
-                    <LinearLayout
-                            android:id="@+id/act_club_review_edit_ll_act_place"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="32dp"
-                            android:orientation="vertical"
-                            android:visibility="gone">
-
-                        <TextView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:fontFamily="@font/noto_sans_kr_regular"
-                                android:text="활동 지역은"
-                                android:textColor="@color/black_1"
-                                android:textSize="12sp" />
-
-                        <LinearLayout
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:orientation="vertical">
-
-                            <TextView
-                                    android:id="@+id/act_club_review_edit_tv_act_place"
-                                    android:layout_width="match_parent"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginVertical="4dp"
-                                    android:fontFamily="@font/noto_sans_kr_regular"
-                                    android:text="@{vm.myReviewDetail.univOrLocation}"
-                                    android:imeOptions="actionNext"
-                                    android:singleLine="true"
-                                    android:textColor="@color/grey_1"
-                                    android:textSize="14sp" />
-
-                            <View
-                                    android:layout_width="match_parent"
-                                    android:layout_height="1dp"
-                                    android:background="@color/grey_4" />
-                        </LinearLayout>
                     </LinearLayout>
 
                     <LinearLayout
@@ -185,7 +144,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:fontFamily="@font/noto_sans_kr_regular"
-                                android:text="활동 시기는"
+                                android:text="활동 시기"
                                 android:textColor="#333333"
                                 android:textSize="12sp" />
 
@@ -304,6 +263,77 @@
                         android:layout_height="8dp"
                         android:layout_marginTop="48dp"
                         android:background="@color/grey_4" />
+
+                <!-- 인턴 부서/직무 정보-->
+
+                <LinearLayout
+                        llVisibilityByReviewType="@{vm.reviewType}"
+                        tools:visibility="gone"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+
+                <LinearLayout
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="24dp"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                    <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/noto_sans_kr_bold"
+                                android:layout_marginTop="32dp"
+                                android:text="부서/직무 정보 ⛳︎"
+                                android:textColor="@color/black_1"
+                                android:textSize="18sp" />
+
+
+                    <LinearLayout
+
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="32dp"
+                            android:orientation="vertical">
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/noto_sans_kr_regular"
+                                android:text="부서/직무 이름"
+                                android:textColor="@color/black_1"
+                                android:textSize="12sp" />
+
+                        <EditText
+                                android:id="@+id/act_club_review_edit_et_field_name"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:fontFamily="@font/noto_sans_kr_regular"
+                                android:imeOptions="actionNext"
+                                android:singleLine="true"
+                                android:textSize="14sp"
+                                android:textColorHint="@color/grey_2"
+                                android:textColor="@color/black_1"
+                                android:layout_marginTop="4dp"
+                                android:maxLength="20"
+                                android:text="@{vm.myReviewDetail.fieldName}"
+                                tools:text="무선사업부 영업팀"
+                                style="@style/EditTheme"/>
+
+
+                    </LinearLayout>
+                </LinearLayout>
+
+                <View
+                        android:layout_width="match_parent"
+                        android:layout_height="8dp"
+                        android:layout_marginTop="48dp"
+                        android:background="@color/grey_4" />
+
+                </LinearLayout>
 
 
                 <!-- 총 별점 추천  -->
