업데이트 이후 자잘한 오류 해결

--- a/app/src/main/res/layout/activity_calendar_detail.xml
+++ b/app/src/main/res/layout/activity_calendar_detail.xml
@@ -907,6 +907,7 @@
                     android:gravity="center"/>
             <RelativeLayout
                     android:visibility="gone"
+                    tools:visibility="visible"
                     android:id="@+id/act_cal_detail_rl_store"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
