--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,11 +16,13 @@
             tools:context=".ui.splash.SplashActivity">
 
         <com.airbnb.lottie.LottieAnimationView
+                android:id="@+id/act_splash_lav"
                 android:layout_centerInParent="true"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:lottie_loop="false"
                 app:lottie_autoPlay="true"
+                app:lottie_enableMergePathsForKitKatAndAbove="true"
                 app:lottie_rawRes="@raw/splash"/>
 
     </RelativeLayout>
